2001-01-11  Autrijus Tang <autrijus@autrijus.org>

	The Initial release of version 1.0.